Updated README file to include website snapshot Updated pipeline to exclude trigger on README and txt file push

--- a/.github/workflows/azure-static-web-apps-sbomviewer.yml
+++ b/.github/workflows/azure-static-web-apps-sbomviewer.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main  # Change if your main branch is different
+    paths:
+      - '**/*'  # Include all files by default
+      - '!README.md'  # Exclude README.md specifically
+      - '!**/*.txt'  # Exclude all .txt files 
   workflow_dispatch:  # Allow manual deployment if needed
 
 jobs:
